@@ -7,5 +7,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Encoding=UTF-8
-Categories=GNOME;Application;Settings;
+Categories=GNOME;SystemSetup;X-SuSE-Core-System;X-SuSE-ControlCenter-System
 OnlyShowIn=GNOME;
+X-KDE-RootOnly=true
+X-KDE-SubstituteUID=true
